@startuml
!pragma layout smetana

package domain.actuator {
    interface Actuator {
        + getActuatorID(): ActuatorID
        + setValue(Value value): Value
        + getActuatorTypeString(): String
    }
    interface FactoryActuator {
        + createActuator(actuatorModelID: ActuatorModelID, repoActuator: RepoActuator): Actuator
    }
    class ImplFactoryActuator {
        + createActuator(actuatorModelID: ActuatorModelID, repoActuator: RepoActuator): Actuator
    }


    class BlindRollerActuator {
        - _actuatorTypeID: ActuatorTypeID
        - _actuatorModelID: ActuatorModelID
        - _actuatorID: ActuatorID
        - _deviceID: DeviceID
        - _value: BlindRollerValue

        # BlindRollerActuator(actuatorTypeID: ActuatorTypeID, actuatorModelID: ActuatorModelID, actuatorID: ActuatorID, deviceID: DeviceID, value: BlindRollerValue)
        + getActuatorTypeString(): String
        + getActuatorID(): ActuatorID
        + setValue(Value value): Value
    }
}



package domain.value {
  class BlindRollerValue {
    - _value : int
    + blindRollerValue(int value)
    + clone() : BlindRollerValue
    + toString() : String
  }
}

package valueObject {
    class ActuatorTypeID {
        - _id: String
        +ActuatorTypeID(id : String)
        +equals(object : Object) : boolean
        +toString() : String
    }

    class ActuatorModelID {
        - _description: String
        +ActuatorModel(_description : String)
        +equals(object : Object) : boolean
        +toString() : String
    }

    class ActuatorID {
        - _id: String
         +ActuatorID(id : String)
         +equals(object : Object) : boolean
         +toString() : String
    }

    class DeviceID {
        - _id: String
        + DeviceID(String id)
        +equals(object : Object) : boolean
                 +toString() : String
    }
}


ImplFactoryActuator ..|> FactoryActuator
ImplFactoryActuator "1" ..> "1" BlindRollerActuator : creates


BlindRollerActuator .up.|> Actuator
BlindRollerActuator "1" -up-> "1" BlindRollerValue : has
BlindRollerActuator "1" -down->  "1" ActuatorTypeID : has
BlindRollerActuator "1" -down->  "1" ActuatorModelID : has
BlindRollerActuator "1" -down->  "1" ActuatorID : has
BlindRollerActuator "1" -down->  "1" DeviceID : has







@enduml
